--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,12 +4,34 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <group android:scaleX="2.61"
-           android:scaleY="2.61"
-           android:translateX="22.68"
-           android:translateY="22.68">
+    <group android:scaleX="3.0"
+           android:scaleY="3.0"
+           android:translateX="18"
+           android:translateY="18">
+        <!-- Beer mug -->
+        <path
+            android:fillColor="#8D6E63"
+            android:pathData="M5,3 L15,3 C16.1,3 17,3.9 17,5 L17,17 C17,18.1 16.1,19 15,19 L5,19 C3.9,19 3,18.1 3,17 L3,5 C3,3.9 3.9,3 5,3 Z"/>
+        <!-- Beer foam -->
+        <path
+            android:fillColor="#F5F5F5"
+            android:pathData="M5,3 L15,3 C16.1,3 17,3.9 17,5 L17,8 L3,8 L3,5 C3,3.9 3.9,3 5,3 Z"/>
+        <!-- Beer handle -->
+        <path
+            android:fillColor="#8D6E63"
+            android:strokeColor="#8D6E63"
+            android:strokeWidth="1.5"
+            android:fillType="nonZero"
+            android:pathData="M17,7 C18.1,7 19,7.9 19,9 L19,13 C19,14.1 18.1,15 17,15"/>
+        <!-- Foam bubbles -->
         <path
             android:fillColor="#FFFFFF"
-            android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM13,17h-2v-6h2v6zM13,9h-2L11,7h2v2z"/>
+            android:pathData="M7,5 m-0.8,0 a0.8,0.8 0,1,1 1.6,0 a0.8,0.8 0,1,1 -1.6,0"/>
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M10,4.5 m-0.6,0 a0.6,0.6 0,1,1 1.2,0 a0.6,0.6 0,1,1 -1.2,0"/>
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M13,5.5 m-0.7,0 a0.7,0.7 0,1,1 1.4,0 a0.7,0.7 0,1,1 -1.4,0"/>
     </group>
 </vector>
